tests/snapshots/run_wpt_conformance__coreml_reduceLogSumExp_float16_4D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_log_sum_exp.https.any.js reduceLogSumExp float16 4D tensor options.axes, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceLogSumExpInput' must be of rank 3, instead got a multi-array value of rank 4.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceLogSumExpInput: f16[2, 2, 2, 3];
  }

  nodes {
    [reduceLogSumExpOutput] = reduceLogSumExp(reduceLogSumExpInput, axes=[0, 2], keepDimensions=false, label="");
  }

  outputs { reduceLogSumExpOutput; }
}
